--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@stomp/rx-stomp": "^2.0.0",
     "angular-feather": "^6.5.0",
     "angular-popper": "^2.0.1",
     "cors": "^2.8.5",
