--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "chart.js": "^4.4.1",
     "cors": "^2.8.5",
     "jwt-decode": "^3.1.2",
+    "maticon": "^1.0.7",
     "ng2-charts": "^5.0.4",
     "ngx-extended-pdf-viewer": "^18.0.0-beta.8",
     "ngx-indexed-db": "^16.0.0",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xng-breadcrumb": "^10.0.2",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
