--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "maticon": "^1.0.7",
     "ng2-charts": "^5.0.4",
     "ngx-extended-pdf-viewer": "^18.0.0-beta.8",
+    "ngx-file-drop": "^16.0.0",
     "ngx-image-cropper": "^7.2.1",
     "ngx-indexed-db": "^16.0.0",
     "ngx-ui-loader": "^13.0.0",
@@ -40,7 +41,7 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.1",
+    "@angular-devkit/build-angular": "^16.2.16",
     "@angular/cli": "^16.2.11",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
