--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^16.2.1",
     "@angular/platform-browser": "^16.0.0",
@@ -26,6 +27,7 @@
     "angular-popper": "^2.0.1",
     "chart.js": "^4.4.1",
     "cors": "^2.8.5",
+    "firebase": "^11.9.1",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^3.1.2",
     "maticon": "^1.0.7",
@@ -36,6 +38,7 @@
     "ngx-indexed-db": "^16.0.0",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.8.0",
+    "tailwindcss-textshadow": "^2.1.3",
     "tslib": "^2.3.0",
     "xng-breadcrumb": "^10.0.2",
     "zone.js": "~0.13.0"
