--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "chart.js": "^4.4.1",
     "cors": "^2.8.5",
     "firebase": "^11.9.1",
+    "google-libphonenumber": "^3.2.42",
     "hammerjs": "^2.0.8",
+    "intl-tel-input": "^25.3.1",
     "jwt-decode": "^3.1.2",
     "maticon": "^1.0.7",
     "ng2-charts": "^5.0.4",
