--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.2",
-    "@angular/cdk": "^16.2.1",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/fire": "^7.6.1",
-    "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.2.1",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/animations": "^16.2.13",
+    "@angular/cdk": "^16.2.13",
+    "@angular/common": "^16.2.13",
+    "@angular/compiler": "^16.2.13",
+    "@angular/core": "^16.2.13",
+    "@angular/fire": "7.6.1",
+    "@angular/forms": "^16.2.13",
+    "@angular/material": "^16.2.13",
+    "@angular/platform-browser": "^16.2.13",
+    "@angular/platform-browser-dynamic": "^16.2.13",
+    "@angular/router": "^16.2.13",
     "@stomp/rx-stomp": "^2.0.0",
     "@syncfusion/ej2-angular-inputs": "^24.2.6",
     "angular-feather": "^6.5.0",
@@ -34,21 +34,20 @@
     "jwt-decode": "^3.1.2",
     "maticon": "^1.0.7",
     "ng2-charts": "^5.0.4",
-    "ngx-extended-pdf-viewer": "^18.0.0-beta.8",
-    "ngx-file-drop": "^16.0.0",
+    "ngx-extended-pdf-viewer": "^17.1.0", 
     "ngx-image-cropper": "^7.2.1",
     "ngx-indexed-db": "^16.0.0",
     "ngx-ui-loader": "^13.0.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "~7.8.1",
     "tailwindcss-textshadow": "^2.1.3",
     "tslib": "^2.3.0",
     "xng-breadcrumb": "^10.0.2",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.16",
-    "@angular/cli": "^16.2.11",
-    "@angular/compiler-cli": "^16.0.0",
+    "@angular-devkit/build-angular": "^16.2.6",
+    "@angular/cli": "^16.2.6",
+    "@angular/compiler-cli": "^16.2.14",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.15",
     "jasmine-core": "~4.6.0",
@@ -59,6 +58,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
-    "typescript": "~5.0.2"
+    "typescript": "~5.1.6"
   }
 }
