--- a/angular.json
+++ b/angular.json
@@ -32,10 +32,13 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/intl-tel-input/build/css/intlTelInput.min.css"
             ],
             "scripts": [
-              "node_modules/chart.js/dist/chart.js"
+              "node_modules/chart.js/dist/chart.js",
+              "node_modules/intl-tel-input/build/js/intlTelInput.min.js"
+
             ]
           },
           "configurations": {
