--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "berliz",
-  "version": "0.0.0",
+  "version": "0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,23 +10,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.13",
-    "@angular/cdk": "^16.2.13",
-    "@angular/common": "^16.2.13",
-    "@angular/compiler": "^16.2.13",
-    "@angular/core": "^16.2.13",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
     "@angular/fire": "7.6.1",
-    "@angular/forms": "^16.2.13",
-    "@angular/material": "^16.2.13",
-    "@angular/platform-browser": "^16.2.13",
-    "@angular/platform-browser-dynamic": "^16.2.13",
-    "@angular/router": "^16.2.13",
+    "@angular/forms": "^16.2.12",
+    "@angular/material": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
     "@stomp/rx-stomp": "^2.0.0",
     "@syncfusion/ej2-angular-inputs": "^24.2.6",
     "angular-feather": "^6.5.0",
     "angular-popper": "^2.0.1",
     "chart.js": "^4.4.1",
     "cors": "^2.8.5",
+    "country-state-city": "^3.2.1",
     "firebase": "^11.9.1",
     "google-libphonenumber": "^3.2.42",
     "hammerjs": "^2.0.8",
@@ -34,7 +35,8 @@
     "jwt-decode": "^3.1.2",
     "maticon": "^1.0.7",
     "ng2-charts": "^5.0.4",
-    "ngx-extended-pdf-viewer": "^17.1.0", 
+    "ngx-extended-pdf-viewer": "^17.1.0",
+    "ngx-file-drop": "^16.0.0",
     "ngx-image-cropper": "^7.2.1",
     "ngx-indexed-db": "^16.0.0",
     "ngx-ui-loader": "^13.0.0",
@@ -42,12 +44,12 @@
     "tailwindcss-textshadow": "^2.1.3",
     "tslib": "^2.3.0",
     "xng-breadcrumb": "^10.0.2",
-    "zone.js": "~0.14.3"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.6",
     "@angular/cli": "^16.2.6",
-    "@angular/compiler-cli": "^16.2.14",
+    "@angular/compiler-cli": "^16.2.12",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.15",
     "jasmine-core": "~4.6.0",
