--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
+    "@ng-select/ng-select": "^11.2.0",
     "@stomp/rx-stomp": "^2.0.0",
     "@syncfusion/ej2-angular-inputs": "^24.2.6",
     "angular-feather": "^6.5.0",
@@ -39,6 +40,7 @@
     "ngx-file-drop": "^16.0.0",
     "ngx-image-cropper": "^7.2.1",
     "ngx-indexed-db": "^16.0.0",
+    "ngx-mask": "^16.4.2",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.8.1",
     "tailwindcss-textshadow": "^2.1.3",
