added validators for phone, address, postal code for location form

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hammerjs": "^2.0.8",
     "intl-tel-input": "^25.3.1",
     "jwt-decode": "^3.1.2",
+    "libphonenumber-js": "^1.12.34",
     "maticon": "^1.0.7",
     "ng2-charts": "^5.0.4",
     "ngx-extended-pdf-viewer": "^17.1.0",
@@ -42,6 +43,7 @@
     "ngx-indexed-db": "^16.0.0",
     "ngx-mask": "^16.4.2",
     "ngx-ui-loader": "^13.0.0",
+    "postcode-validator": "^3.10.9",
     "rxjs": "~7.8.1",
     "tailwindcss-textshadow": "^2.1.3",
     "tslib": "^2.3.0",
